# codesearch-test

./: .cursorignore  .gitignore  .gitmodules  install.py  llm.py  logger.py  main.py  pyproject.toml  repopack-output.txt  repopack.config.json  requirements.txt  server.py  setup_lets_encrupt.sh  test.py  test_ell.py  test_summary.py
alembic/: env.py
alembic/versions/: 02a7f45559cf_initial_migration.py  237edb79a826_added_clusters_files_to_repo.py  43f0fea504a6_added_user_relationship_to_repos.py  56b64e8ac64d_added_index_path_to_repo.py  839d8d4452de_added_foreign_keys_to_associate_table.py  884543de2354_added_file_path_field.py  a739fc5f962f_added_owner_field_to_repo.py  b5dbec62f380_added_views_to_repo.py  cd6d4820e16b_added_graph_path_and_summary_path.py  da95aeecb8f1_refactored_user_and_repo_models.py  f2797c3367b1_added_language_and_repo_size_to_repo.py
moatless/: file_context.py  workspace.py
moatless/benchmark/: create_dataset.py  evaluation.py  utils.py
moatless/codeblocks/: __init__.py  codeblocks.py  module.py
moatless/edit/: plan.py  plan_lines.py
moatless/index/: .gitignore  cluster_node.py  code_index.py  epic_split.py  simple_faiss.py
notebooks/: build_rewrite_graph.py  chunk_graph_alt.ipynb  cluster_summary_compare.ipynb  gen_categories.ipynb  llm_summarize.py  repo_graph.json
rtfs/: build_index.py  call_ell.py  exceptions.py  fs.py  graph.py  models.py
src/: config.py  exceptions.py  flask.json  index.py  logger.py  model_relations.py  models.py  oai.py  utils.py
tests/: conftest.py  fake_user.json  flood_test_client.py  test_graph.py
(+59 files in other folders)
